--- a/app/src/main/res/layout/chapters_item.xml
+++ b/app/src/main/res/layout/chapters_item.xml
@@ -1,61 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:background="@drawable/list_item_selector_background"
-    android:paddingStart="16dp"
-    android:paddingEnd="5dp">
+    >
 
-    <ImageView
-        android:id="@+id/bookmark_icon"
-        android:layout_width="16dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="4dp"
+    <FrameLayout
+        android:id="@+id/chapter_swipe_right_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingVertical="4dp"
+        android:paddingHorizontal="12dp"
+        android:background="?attr/colorAccent"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/chapter_title"
-        app:layout_constraintEnd_toStartOf="@id/chapter_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_bookmark_24dp"
-        app:tint="?attr/colorAccent"
-        tools:visibility="visible" />
+        >
 
-    <TextView
-        android:id="@+id/chapter_title"
-        style="@style/TextAppearance.Regular.Body1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        app:layout_constraintEnd_toStartOf="@+id/download"
-        app:layout_constraintStart_toEndOf="@+id/bookmark_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Title" />
+        <ImageView
+            android:id="@+id/read_swipe_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center|end"
+            android:src="@drawable/ic_done_24dp"
+            app:tint="?attr/colorOnPrimary"
+            />
 
-    <TextView
-        android:id="@+id/chapter_description"
-        style="@style/TextAppearance.Regular.Caption"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:ellipsize="end"
-        android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/download"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="22/02/2016 • Scanlator • Page: 45" />
+    </FrameLayout>
 
-    <eu.kanade.tachiyomi.ui.manga.chapter.ChapterDownloadView
-        android:id="@+id/download"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:id="@+id/chapter_swipe_left_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingVertical="4dp"
+        android:paddingHorizontal="12dp"
+        android:background="?attr/colorAccent"
+        android:visibility="gone"
+        >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/bookmark_swipe_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center|start"
+            android:src="@drawable/ic_bookmark_24dp"
+            app:tint="?attr/colorOnPrimary"
+            />
+
+    </FrameLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/chapter_swipe_front_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="16dp"
+        android:paddingEnd="5dp"
+        android:background="@drawable/list_item_selector_background"
+        tools:visibility="gone"
+        >
+
+        <ImageView
+            android:id="@+id/bookmark_icon"
+            android:layout_width="16dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="4dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/chapter_title"
+            app:layout_constraintEnd_toStartOf="@id/chapter_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_bookmark_24dp"
+            app:tint="?attr/colorAccent"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/chapter_title"
+            style="@style/TextAppearance.Regular.Body1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            app:layout_constraintEnd_toStartOf="@+id/download"
+            app:layout_constraintStart_toEndOf="@+id/bookmark_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Title" />
+
+        <TextView
+            android:id="@+id/chapter_description"
+            style="@style/TextAppearance.Regular.Caption"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/download"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="22/02/2016 • Scanlator • Page: 45" />
+
+        <eu.kanade.tachiyomi.ui.manga.chapter.ChapterDownloadView
+            android:id="@+id/download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
