--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -69,6 +69,7 @@
         <item name="switchStyle">@style/Widget.Tachiyomi.Switch</item>
         <item name="elevationOverlayEnabled">false</item>
         <item name="lightSystemBarsOnPrimary">false</item>
+        <item name="sliderStyle">@style/Widget.Tachiyomi.Slider</item>
 
         <!-- Custom Attributes-->
         <item name="colorFilterActive">@color/filter_light</item>
